@@ -1,5 +1,6 @@
 1.5.14.dev0
  * #398: Clarify canonical home of borgmatic in documentation.
+ * #406: Clarify that spaces in path names should not be backslashed in path names.
  * Fix build so as not to attempt to build and push documentation for a non-master branch.
  * "Fix" build failure with Alpine Edge by switching from Edge to Alpine 3.13.
 
